--- a/characters.html
+++ b/characters.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-2">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro-poster.webp" alt="Logo" class="img-fluid rounded">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro-poster.webp" alt="Logo" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
                     <h1 class="h4 mb-0 text-white">Anime Flix</h1>
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-4">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Anime_Flix_Logo.jpg" alt="Logo" class="img-fluid mb-2 rounded">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media%2FAnime_Flix_Logo.jpg" alt="Logo" class="img-fluid mb-2 rounded">
                     <h5>Anime Flix</h5>
                     <div>
                         <a href="#" class="text-warning me-2"><i class="fab fa-facebook"></i> Facebook</a>
