Update image sources to use GitHub links

--- a/characters.html
+++ b/characters.html
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card border-success">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Satsuki-totoro.jpg" class="card-img-top rounded-top" alt="Satsuki">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Satsuki-totoro.jpg" class="card-img-top rounded-top" alt="Satsuki">
                     <div class="card-body">
                         <h5 class="card-title text-info">Satsuki</h5>
                         <p class="card-text">The older sister, brave and responsible, who helps care for her family and discovers the magical world.</p>
@@ -49,7 +49,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card border-success">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Mei-totoro.webp" class="card-img-top rounded-top" alt="Mei">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Mei-totoro.webp" class="card-img-top rounded-top" alt="Mei">
                     <div class="card-body">
                         <h5 class="card-title text-info">Mei</h5>
                         <p class="card-text">The younger sister, curious and adventurous, who first encounters Totoro and brings wonder to her sister.</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card border-success">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/totoro-MNT.webp" class="card-img-top rounded-top" alt="Totoro">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/totoro-MNT.webp" class="card-img-top rounded-top" alt="Totoro">
                     <div class="card-body">
                         <h5 class="card-title text-info">Totoro</h5>
                         <p class="card-text">The friendly forest spirit, a symbol of nature's magic, who befriends the sisters.</p>
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-md-6 mb-4">
                 <div class="card border-success">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Catbus-totoro.png" class="card-img-top rounded-top" alt="Catbus">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Catbus-totoro.png" class="card-img-top rounded-top" alt="Catbus">
                     <div class="card-body">
                         <h5 class="card-title text-info">Catbus</h5>
                         <p class="card-text">A mischievous spirit that aids Totoro but can be unpredictable, adding to the adventure's tension.</p>
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-4">
-                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media%2FAnime_Flix_Logo.jpg" alt="Logo" class="img-fluid mb-2 rounded">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Anime_Flix_Logo.jpg" alt="Logo" class="img-fluid mb-2 rounded">
                     <h5>Anime Flix</h5>
                     <div>
                         <a href="#" class="text-warning me-2"><i class="fab fa-facebook"></i> Facebook</a>
