--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-2">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro-poster.webp" alt="Logo" class="img-fluid rounded">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro-poster.webp" alt="Logo" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
                     <h1 class="h4 mb-0 text-white">Anime Flix</h1>
@@ -34,7 +34,7 @@
     <!-- Body: Feature Page -->
     <main class="container my-5 bg-white rounded shadow p-4">
         <h2 class="text-info">My Neighbor Totoro</h2>
-        <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro-poster.webp" alt="Totoro Poster" class="img-fluid mb-4 rounded">
+        <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro-poster.webp" alt="Totoro Poster" class="img-fluid mb-4 rounded">
         <h3 class="text-success">Highlights</h3>
         <ul class="list-group list-group-flush">
             <li class="list-group-item bg-light">A heartwarming story of two sisters discovering magical creatures in rural Japan.</li>
@@ -46,8 +46,8 @@
         
         <!-- Video Section -->
         <h3 class="text-success">Watch the Trailer</h3>
-        <video class="img-fluid rounded shadow mb-4" controls poster="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro-poster.webp">
-            <source src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_movieTrailer.mp4" type="video/mp4">
+        <video class="img-fluid rounded shadow mb-4" controls poster="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro-poster.webp">
+            <source src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_movieTrailer.mp4" type="video/mp4">
             Your browser does not support the video tag. <a href="media/videos/totoro-trailer.mp4">Download the video here</a>.
         </video>
         
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-4">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Anime_Flix_Logo.jpg" alt="Logo" class="img-fluid mb-2 rounded">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Anime_Flix_Logo.jpg" alt="Logo" class="img-fluid mb-2 rounded">
                     <h5>Anime Flix</h5>
                     <div>
                         <a href="#" class="text-warning me-2"><i class="fab fa-facebook"></i> Facebook</a>
