--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-2">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro-poster.webp" alt="Logo" class="img-fluid rounded">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro-poster.webp" alt="Logo" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
                     <h1 class="h4 mb-0 text-white">Anime Flix</h1>
@@ -91,7 +91,7 @@
             <!-- Product 5: Totoro T-Shirt -->
             <div class="col">
                 <div class="card h-100 border-success product-card">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_Tshirt.jpeg" class="card-img-top rounded-top" alt="Totoro T-Shirt">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_Tshirt.jpeg" class="card-img-top rounded-top" alt="Totoro T-Shirt">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-info">Totoro T-Shirt</h5>
                         <p class="card-text">Comfortable cotton shirt with Totoro design.</p>
@@ -104,7 +104,7 @@
             <!-- Product 6: Movie Poster -->
             <div class="col">
                 <div class="card h-100 border-success product-card">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_Original_Poster.webp" class="card-img-top rounded-top" alt="Movie Poster">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_Original_Poster.webp" class="card-img-top rounded-top" alt="Movie Poster">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-info">Totoro Original Movie Poster</h5>
                         <p class="card-text">Official poster print for your wall.</p>
@@ -117,7 +117,7 @@
             <!-- Product 7: Soundtrack CD -->
             <div class="col">
                 <div class="card h-100 border-success product-card">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_Soundtrack.jpeg" class="card-img-top rounded-top" alt="Soundtrack CD">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_Soundtrack.jpeg" class="card-img-top rounded-top" alt="Soundtrack CD">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-info">Soundtrack CD</h5>
                         <p class="card-text">Original score by Joe Hisaishi.</p>
@@ -130,7 +130,7 @@
             <!-- Product 8: Totoro Mug -->
             <div class="col">
                 <div class="card h-100 border-success product-card">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_Mug.jpeg" class="card-img-top rounded-top" alt="Totoro Mug">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_Mug.jpeg" class="card-img-top rounded-top" alt="Totoro Mug">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-info">Totoro Mug</h5>
                         <p class="card-text">Ceramic mug with Totoro illustration.</p>
@@ -177,7 +177,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-4">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Anime_Flix_Logo.jpg" alt="Logo" class="img-fluid mb-2 rounded">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Anime_Flix_Logo.jpg" alt="Logo" class="img-fluid mb-2 rounded">
                     <h5>Anime Flix</h5>
                     <div>
                         <a href="#" class="text-warning me-2"><i class="fab fa-facebook"></i> Facebook</a>
