Update product images to use GitHub links

--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
             <!-- Product 1: Totoro Plush -->
             <div class="col">
                 <div class="card h-100 border-success product-card">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_Plushie.webp" class="card-img-top rounded-top" alt="Totoro Plush">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_Plushie.webp" class="card-img-top rounded-top" alt="Totoro Plush">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-info">Totoro Plush</h5>
                         <p class="card-text">Soft and cuddly plush toy of the iconic forest spirit.</p>
@@ -52,7 +52,7 @@
             <!-- Product 2: Satsuki Figure -->
             <div class="col">
                 <div class="card h-100 border-success product-card">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_Satsuki.jpg" class="card-img-top rounded-top" alt="Satsuki Figure">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_Satsuki.jpg" class="card-img-top rounded-top" alt="Satsuki Figure">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-info">Satsuki Figure</h5>
                         <p class="card-text">Collectible figure of the brave older sister.</p>
@@ -65,7 +65,7 @@
             <!-- Product 3: Mei Doll -->
             <div class="col">
                 <div class="card h-100 border-success product-card">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_Mei.jpeg" class="card-img-top rounded-top" alt="Mei Doll">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_Mei.jpeg" class="card-img-top rounded-top" alt="Mei Doll">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-info">Mei Doll</h5>
                         <p class="card-text">Adorable doll inspired by the curious younger sister.</p>
@@ -78,7 +78,7 @@
             <!-- Product 4: Catbus Model -->
             <div class="col">
                 <div class="card h-100 border-success product-card">
-                    <img src="/storage/emulated/0/Fin Exam - MCO Fin Group/totoro-flix/media/Totoro_Catbus_actionFigure.jpeg" class="card-img-top rounded-top" alt="Catbus Model">
+                    <img src="https://github.com/Gelong-GH/FinExam-MCO-Fin-Group/blob/main/media/Totoro_Catbus_actionFigure.jpeg" class="card-img-top rounded-top" alt="Catbus Model">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-info">Catbus Action Figure Model</h5>
                         <p class="card-text">Detailed model of the magical Catbus vehicle.</p>
